# Cloude_PR

./: .gitignore  .mcp.json  1c-uso-find-object.bsl  1c-uso-meta-extractor.bsl  CLAUDE.md  README.docx  README.md  create_shortcut.vbs  kill_restart.ps1  merge_parts.py  regen.ps1  run_gate.ps1  setup.bat  skills-lock.json  Снабжение_1С_ERP_УСО_Сквозной_пример_v2.docx
.claude/: BACKLOG.md  (+4 more)
ai-ecosystem-1c/: .coverage  .env.example  CLAUDE.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  start.bat  stop.bat
ai-ecosystem-1c/agents/: base_agent.py
ai-ecosystem-1c/agents/classifier/: agent.py  prompts.py  routing_rules.py
ai-ecosystem-1c/agents/voice_agent/: agent.py  dialogue_manager.py  prompts.py
ai-ecosystem-1c/dashboard/: PLAN.md  package-lock.json  package.json
ai-ecosystem-1c/dashboard/scripts/: download-pro-refs.py  download-ref-samples.py  download-ref-voice.py  download-voiceover-refs.py  generate-voices.py  ref_text.txt  test-voices-edge.py  test-voices-f5tts.py  test-voices-fix.py  test-voices-gemini.py  test-voices-improved.py  test-voices-marina-v2.py  test-voices-openai.py  test-voices-silero.py  test-voices-v3.py  test-voices-yandex-all.py  test-voices.py
ai-ecosystem-1c/database/: connection.py
ai-ecosystem-1c/database/migrations/: env.py
ai-ecosystem-1c/orchestrator/: config.py  dependencies.py  main.py
ai-ecosystem-1c/scripts/: seed_demo.py
ai-ecosystem-1c/tests/: conftest.py
projects/interview-to-bpmn/: config.yaml  create_shortcut.vbs  main.py  pyproject.toml  start.bat  start_preview.py
(+1220 files in other folders)
